[package]
name = "coldfire-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
base64 = "0.13.0"
md5 = "0.7.0"
reqwest = { version="0.11.4", features = ["blocking"] }
error-chain = "0.12.4"

